[gd_scene load_steps=4 format=3 uid="uid://68rmjri78bm2"]

[ext_resource type="Script" uid="uid://dvneuiu2yp1wb" path="res://scripts/UI/achievement.gd" id="1_4cbr5"]
[ext_resource type="Script" uid="uid://cvpo88lsv4uxc" path="res://scripts/UI/ButtonAction.gd" id="2_rnxx6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4cbr5"]

[node name="achievement" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cbr5")

[node name="MainScrren" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenTexture" type="NinePatchRect" parent="MainScrren"]
layout_mode = 2

[node name="Maincontainer" type="MarginContainer" parent="MainScrren/ScreenTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainScrren/ScreenTexture/Maincontainer"]
layout_mode = 2

[node name="LeaveButton" type="Button" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 8
text = "Back"

[node name="LeaveAction" type="Node" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer"]
script = ExtResource("2_rnxx6")
button_path = NodePath("../LeaveButton")

[node name="seperator" type="Control" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 165

[node name="Firstcombatbutton" type="Button" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "First
Combat
"

[node name="FirstcombatAction" type="Node" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/HBoxContainer"]
script = ExtResource("2_rnxx6")
button_path = NodePath("../Firstcombatbutton")

[node name="buttonseperator" type="Button" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_4cbr5")
button_mask = 0

[node name="seperator" type="Control" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Control2" type="Control" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 475

[node name="Control" type="Control" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 92

[node name="Control" type="Control" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="achievement1container" type="PanelContainer" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="closebutton" type="Button" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer/achievement1container"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="closeaction" type="Node" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer/achievement1container"]
script = ExtResource("2_rnxx6")
button_path = NodePath("../closebutton")

[node name="VBoxContainer" type="VBoxContainer" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer/achievement1container"]
custom_minimum_size = Vector2(0, 170)
layout_mode = 2
size_flags_vertical = 8

[node name="titlelabel" type="Label" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer/achievement1container/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="descriptionlabel" type="Label" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer/achievement1container/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="unlockedlabel" type="Label" parent="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer/achievement1container/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/HBoxContainer/Firstcombatbutton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MainScrren/ScreenTexture/Maincontainer/VBoxContainer/CanvasLayer/HBoxContainer/VBoxContainer/achievement1container/closebutton" to="." method="_on_closebutton_pressed"]
